--- a/index.html
+++ b/index.html
@@ -250,9 +250,8 @@
                     <dic class="article">
                         <img src="img/pic1.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="nameOutfit">Xtreme</p>
                         </div>
                     </dic>
                 </article>
@@ -260,9 +259,8 @@
                     <dic class="article">
                         <img src="img/pic2.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="price">Outfit..........................$599</p>
+                            <p class="nameOutfit">Aggressive</p>
                         </div>
                     </dic>
                 </article>
@@ -270,9 +268,8 @@
                     <dic class="article">
                         <img src="img/pic15.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="price">Outfit..........................$599</p>
+                            <p class="nameOutfit">Street</p>
                         </div>
                     </dic>
                 </article>
@@ -280,9 +277,8 @@
                     <dic class="article">
                         <img src="img/pic16.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="nameOutfit">Aggressive</p>
                         </div>
                     </dic>
                 </article>
@@ -290,9 +286,8 @@
                     <dic class="article">
                         <img src="img/pic5.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="price">Outfit..........................$999</p>
+                            <p class="nameOutfit">Street</p>
                         </div>
                     </dic>
                 </article>
@@ -302,9 +297,8 @@
                     <dic class="article">
                         <img src="img/pic6.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="price">Outfit..........................$599</p>
+                            <p class="nameOutfit">Xtreme</p>
                         </div>
                     </dic>
                 </article>
@@ -312,9 +306,8 @@
                     <dic class="article">
                         <img src="img/pic22.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="nameOutfit">Agressive</p>
                         </div>
                     </dic>
                 </article>
@@ -322,9 +315,8 @@
                     <dic class="article">
                         <img src="img/pic8.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="nameOutfit">Aggressive</p>
                         </div>
                     </dic>
                 </article>
@@ -332,9 +324,8 @@
                     <dic class="article">
                         <img src="img/pic25.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="nameOutfit">Aggressive</p>
                         </div>
                     </dic>
                 </article>
@@ -342,9 +333,8 @@
                     <dic class="article">
                         <img src="img/pic18.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="price">Outfit..........................$999</p>
+                            <p class="nameOutfit">Aggressive</p>
                         </div>
                     </dic>
                 </article>
@@ -354,9 +344,8 @@
                     <dic class="article">
                         <img src="img/pic11.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="price">Outfit..........................$599</p>
+                            <p class="nameOutfit">Street</p>
                         </div>
                     </dic>
                 </article>
@@ -364,9 +353,8 @@
                     <dic class="article">
                         <img src="img/pic24.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="price">Outfit..........................$999</p>
+                            <p class="nameOutfit">Xtreme</p>
                         </div>
                     </dic>
                 </article>
@@ -374,9 +362,8 @@
                     <dic class="article">
                         <img src="img/pic13.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="price">Outfit..........................$999</p>
+                            <p class="nameOutfit">Aggressive</p>
                         </div>
                     </dic>
                 </article>
@@ -384,9 +371,8 @@
                     <dic class="article">
                         <img src="img/pic14.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="price">Outfit..........................$999</p>
+                            <p class="nameOutfit">Xtreme</p>
                         </div>
                     </dic>
                 </article>
@@ -394,9 +380,8 @@
                     <dic class="article">
                         <img src="img/pic37.webp" alt="Outfit Image" class="outFit">
                         <div class="info">
-                            <img class="heartIcon" src="img/wishlist_Icon.svg" alt="Heart icon">
                             <p class="price">Outfit..........................$499</p>
-                            <a href="views/store.html" class="linkStore">Add to cart</a>
+                            <p class="nameOutfit">Street</p>
                         </div>
                     </dic>
                 </article>
@@ -427,7 +412,7 @@
                         <input type="checkbox" id="new1" class="new">
                         <a href="views/store.html" class="smallCard">
                             <img src="img/pic38.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">aggressive......................$599</p>
                         </a>
                         <img src="img/pic38.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -440,7 +425,7 @@
                         <input type="checkbox" id="new2" class="new">
                         <a href="views/store.html" class="smallCard">
                             <img src="img/pic28.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Aggressive......................$499</p>
                         </a>
                         <img src="img/pic28.webp" alt="Outfit Image"  id="outFit" class="outFit">
                     </div>
@@ -453,7 +438,7 @@
                         <input type="checkbox" id="new3" class="new">
                         <a href="views/store.html"  class="smallCard">
                             <img src="img/pic29.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Street.............................$599</p>
                         </a>
                         <img src="img/pic29.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -466,7 +451,7 @@
                         <input type="checkbox" id="new4" class="new">
                         <a href="views/store.html" class="smallCard">
                             <img src="img/pic33.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Aggressive......................$599</p>
                         </a>
                         <img src="img/pic33.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -479,7 +464,7 @@
                         <input type="checkbox" id="new5" class="new">
                         <a href="views/store.html" class="smallCard">
                             <img src="img/pic30.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Xtreme...........................$999</p>
                         </a>
                         <img src="img/pic30.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -494,7 +479,7 @@
                         <input type="checkbox" id="new6" class="new">
                         <a href="views/store.html" class="smallCard">
                             <img src="img/pic20.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Street...........................$499</p>
                         </a>
                         <img src="img/pic20.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -507,7 +492,7 @@
                         <input type="checkbox" id="new7" class="new">
                         <a href="views/store.html" class="smallCard">
                             <img src="img/pic17.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Xtreme............................$499</p>
                         </a>
                         <img src="img/pic17.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -520,7 +505,7 @@
                         <input type="checkbox" id="new8" class="new">
                         <a href="views/store.html" class="smallCard">
                             <img src="img/pic36.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Aggressive.....................$999</p>
                         </a>
                         <img src="img/pic36.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -533,7 +518,7 @@
                         <input type="checkbox" id="new9" class="new">
                         <a href="views/store.html" class="smallCard">
                             <img src="img/pic35.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Xtreme............................$599</p>
                         </a>
                         <img src="img/pic35.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
@@ -546,7 +531,7 @@
                         <input type="checkbox" id="new10" class="new">
                         <a href="views/store.html" class="smallCard">
                             <img src="img/pic34.webp" alt="Outfit Image" class="outFit">
-                            <p class="price">Outfit.................................$499</p>
+                            <p class="price">Street.............................$999</p>
                         </a>
                         <img src="img/pic34.webp" alt="Outfit Image" id="outFit" class="outFit">
                     </div>
