Polishing newArrivaks cards

--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@
             <div class="sectionCardContainer d-flex flex-direction-row">
                 <article class="cardProducts m-0">
                     <div class="article1">
+                        <p class="nameOut">Aggressive</p>
                         <label for="new1" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -419,6 +420,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article2">
+                        <p class="nameOut">Aggressive</p>
                         <label for="new2" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -432,6 +434,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article3">
+                        <p class="nameOut">Street</p>
                         <label for="new3" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -445,6 +448,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article4">
+                        <p class="nameOut">Aggressive</p>
                         <label for="new4" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -458,6 +462,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article5">
+                        <p class="nameOut">Xtreme</p>
                         <label for="new5" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -473,6 +478,7 @@
             <div class="sectionCardContainer d-flex flex-direction-row">
                 <article class="cardProducts m-0">
                     <div class="article6">
+                        <p class="nameOut">Street</p>
                         <label for="new6" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -486,6 +492,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article7">
+                        <p class="nameOut">Xtreme</p>
                         <label for="new7" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -499,6 +506,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article8">
+                        <p class="nameOut">Aggressive</p>
                         <label for="new8" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -512,6 +520,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article9">
+                        <p class="nameOut">Xtreme</p>
                         <label for="new9" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -525,6 +534,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article10">
+                        <p class="nameOut">Street</p>
                         <label for="new10" class="fadeAway">
                             <img src="img/skull.svg" alt="Skull logo" class="skull">
                         </label>
