--- a/index.html
+++ b/index.html
@@ -156,6 +156,15 @@
             </article>
         </section>
 
+        <!-- Cart & Store Modal -->
+
+        <section id="messageNewProduct">
+
+            <!-- Se inyecta el codigo desde cart.js & store.js-->
+
+        </section>
+
+
         <!-- ShoppingCart -->
 
         <input id="cart" type="checkbox">
