--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </a>
         <section class="menuIcons">
             <ul>
-                <li><a href="#"><img class="icon iconMoon" src="img/moon_Icon.svg" alt=""></a></li>
+                <!-- <li><a href="#"><img class="icon iconMoon" src="img/moon_Icon.svg" alt=""></a></li> -->
                 <li><a href="views/sign_In_&_Create_Account.html"><img class="icon" src="img/user_Icon.svg" alt=""></a></li>
                 <li>
                     <label for="wishlistSide" class="wishHeadLine">
@@ -55,6 +55,9 @@
                 </li>
             </ul>
         </section>
+
+        <!-- MenuSide -->
+
         <nav class="menuSide">
             <section class="top">
                 <img class="brand" src="img/skullLogo.svg" alt="Break a Leg brand">
@@ -184,20 +187,9 @@
                                 <h3 class="titleCartlist">Total</h3>
                             </article>
                             <article class="containerArticles">
-                                <!-- <article class="cartlist">
-                                        <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
-                                        <div class="description">
-                                            <p class="price">$499</p>
-                                            <div class="icons">
-                                                <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                                <img src="../img/edit_Icon.svg" alt="Edit icon">
-                                            </div>
-                                        </div>
-                                        <div class="itemNumber">
-                                            <label for="quantity"></label>
-                                        </div>
-                                        <p class="total">$499</p>
-                                </article> -->
+
+                                <!-- Se inyecta el codigo desde cart.js -->
+
                             </article>
                         </div>
                     </div>
@@ -230,19 +222,8 @@
                             <h3 class="titleWishlist">Wish</h3>
                         </article>
                         <article class="containerWishlist">
-                            <!-- <article class="wishlist">
-                                <div class="blockProduct">
-                                    <img class="itemProduct" src="img/pic24.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="wishPrice">$499</p>
-                                        <div class="icons">
-                                            <img src="img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="img/edit_Icon.svg" alt="Edit icon">
-                                        </div>
-                                    </div>
-                                    <img class="itemWishlist" src="img/wishlist_Icon.svg" alt="Wishlist icon">
-                                </div>
-                            </article> -->
+
+                            <!-- Se inyecta el codigo desde wishlist.js -->
 
                         </article>
                     </div>
@@ -726,6 +707,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+
+    <!-- Librery -->
+
+    <!-- Pendiente Modal de compra exitosa y numero de compra -->
 
     <!-- JS -->
 
