--- a/index.html
+++ b/index.html
@@ -715,12 +715,12 @@
 
     <!-- JS -->
 
-    <script src="cart.js"></script>
+    <!-- <script src="cart.js"></script>
     <script src="store.js"></script>
     <script src="filter.js"></script>
-    <script src="wishlist.js"></script>
+    <script src="wishlist.js"></script> -->
 
-    <!-- <script src="main.js"></script> -->
+    <script type="text/javascript" src="main.js"></script>
 
 </body>
 </html>
