Making Landing menu & gift card option

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
         <section class="menuIcons">
             <ul>
                 <!-- <li><a href="#"><img class="icon iconMoon" src="img/moon_Icon.svg" alt=""></a></li> -->
-                <li><a href="views/sign_In_&_Create_Account.html"><img class="icon" src="img/user_Icon.svg" alt=""></a></li>
+                <li>
+                    <a href="views/sign_In_&_Create_Account.html">
+                        <img class="icon" src="img/user_Icon.svg" alt="">
+                    </a>
+                </li>
                 <li>
                     <label for="wishlistSide" class="wishHeadLine">
                         <img class="wishlistIcon" src="img/wishlist_White_Icon.svg" alt="Heart icon">
@@ -50,8 +54,22 @@
                 </li>
                 <li>
                     <label for="cart" class="cartShop">
-                        <img class="cartIcon" src="img/empty_Shopping_Cart.svg" alt="CArt icon">
+                        <img class="cartIcon" src="img/empty_Shopping_Cart.svg" alt="Cart icon">
                     </label>
+                </li>
+                <li>
+                    <div class="landingIcon">
+                        <img class="drawerIcon" src="img/menu_Icon.svg" alt="Menu icon">
+                    <div/>
+                    <nav class="landingMenu">
+                        <ul>
+                            <li><a class="linksLanding" href="index#"></a></li>
+                            <li><a class="linksLanding" href="index#"></a></li>
+                            <li><a class="linksLanding" href="index#"></a></li>
+                            <li><a class="linksLanding" href="index#"></a></li>
+                            <li><a class="linksLanding" href="index#"></a></li>
+                        </ul>
+                    </nav>
                 </li>
             </ul>
         </section>
@@ -75,7 +93,6 @@
                     </li>
                     <li><a href="index.html" class="link">Home</a></li>
                     <li><a href="views/store.html" class="link">Store</a></li>
-                    <li><a href="index.html#giftCards" class="link">Gift cards</a></li>
                     <li><a href="views/show_Room.html" class="link">Show Room</a></li>
                 </ul>
             </section>
