Adding menuLanding Icon

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                     <div class="landingIcon">
-                        <img class="drawerIcon" src="img/menu_Icon.svg" alt="Menu icon">
+                        <img class="menuLandingIcon" src="img/menu_Landing_Icon.svg" alt="Menu landing icon">
                     <div/>
                     <nav class="landingMenu">
                         <ul>
