--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
                     </label>
                 </li>
                 <li>
-                    <div class="landingIcon">
+                    <li class="landingIcon">
                         <img class="menuLandingIcon" src="img/menu_Landing_Icon.svg" alt="Menu landing icon">
-                    <div/>
+                    </li>
                     <nav class="landingMenu">
                         <ul>
-                            <li><a class="linksLanding" href="index#"></a></li>
-                            <li><a class="linksLanding" href="index#"></a></li>
-                            <li><a class="linksLanding" href="index#"></a></li>
-                            <li><a class="linksLanding" href="index#"></a></li>
-                            <li><a class="linksLanding" href="index#"></a></li>
+                            <li><a class="linksLanding" href="index.html#bestSellersSection"></a></li>
+                            <li><a class="linksLanding" href="index.html#newArrivalsUno"></a></li>
+                            <li><a class="linksLanding" href="index.html#getOffSection"></a></li>
+                            <li><a class="linksLanding" href="index.html#giftCards"></a></li>
+                            <li><a class="linksLanding" href="index.html#sectioncontactUs"></a></li>
                         </ul>
                     </nav>
                 </li>
@@ -250,7 +250,7 @@
 
         <!-- Best Sellers -->
 
-        <section class="bestSellers ">
+        <section class="bestSellers" id="bestSellersSection">
             <h2 class="subtitle">Best sellers</h2>
             <div class="sectionCardBlock d-flex flex-row gb-5">
                 <article class="cardProducts me-3">
@@ -559,7 +559,7 @@
 
         <!-- Get 25% Off -->
 
-        <section class="getOff" id="getOff">
+        <section class="getOff" id="getOffSection">
             <article class="containerGetOff">
                 <div class="info">
                     <h2 class="title">Get 25% off</h2>
@@ -688,7 +688,7 @@
 
     <!-- Footer -->
 
-    <footer class="footerContainer">
+    <footer class="footerContainer" id="sectioncontactUs">
         <section class="footer">
             <aricle class="payments">
                 <h3>Payments</h3>
