New menu landing

--- a/index.html
+++ b/index.html
@@ -57,17 +57,16 @@
                         <img class="cartIcon" src="img/empty_Shopping_Cart.svg" alt="Cart icon">
                     </label>
                 </li>
-                <li>
-                    <li class="landingIcon">
+                <li class="menuSection">
+                    <lo class="landingIcon">
                         <img class="menuLandingIcon" src="img/menu_Landing_Icon.svg" alt="Menu landing icon">
-                    </li>
+                    </lo>
                     <nav class="landingMenu">
                         <ul>
-                            <li><a class="linksLanding" href="index.html#bestSellersSection"></a></li>
-                            <li><a class="linksLanding" href="index.html#newArrivalsUno"></a></li>
-                            <li><a class="linksLanding" href="index.html#getOffSection"></a></li>
-                            <li><a class="linksLanding" href="index.html#giftCards"></a></li>
-                            <li><a class="linksLanding" href="index.html#sectioncontactUs"></a></li>
+                            <li><a class="linksLanding" href="index.html#bestSellersSection">Best sellers</a></li>
+                            <li><a class="linksLanding" href="index.html#newArrivalsUno">New arrivals</a></li>
+                            <li><a class="linksLanding" href="index.html#getOffSection">Get off</a></li>
+                            <li><a class="linksLanding" href="index.html#giftCards">Gift cards</a></li>
                         </ul>
                     </nav>
                 </li>
