--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                     </label>
                 </li>
                 <li class="menuSection">
-                    <lo class="landingIcon">
+                    <input type="checkbox" id="newMenu">
+                    <label for="newMenu" class="landingIcon">
                         <img class="menuLandingIcon" src="img/menu_Landing_Icon.svg" alt="Menu landing icon">
-                    </lo>
+                    </label>
                     <nav class="landingMenu">
                         <ul>
                             <li><a class="linksLanding" href="index.html#bestSellersSection">Best sellers</a></li>
