--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <h1 class="break">Break a Leg</h1>
                     <h2 class="subtitle">¡Where your passion is just beginning!</h2>
                     <div class="cta">
-                        <a class="ctaDiscount" href="index.html#getOff">Discount</a>
+                        <a class="ctaDiscount" href="index.html#getOffSection">Discount</a>
                         <a class="ctaNewArrivals" href="index.html#newArrivalsUno" >New Arrivals</a>
                     </div>
                     <p class="promo">"Don't forget to visit our showroom to check out
