Improving landingPage menu

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                     </label>
                     <nav class="landingMenu">
                         <ul>
-                            <li><a class="linksLanding" href="index.html#bestSellersSection">Best sellers</a></li>
-                            <li><a class="linksLanding" href="index.html#newArrivalsUno">New arrivals</a></li>
-                            <li><a class="linksLanding" href="index.html#getOffSection">Get off</a></li>
-                            <li><a class="linksLanding" href="index.html#giftCards">Gift cards</a></li>
+                            <li><a class="linksLanding" href="index.html#bestSellersSection"><p>Best sellers<span>👈</span></p></a></li>
+                            <li><a class="linksLanding" href="index.html#newArrivalsUno"><p>New arrivals<span>👈</span></p></a></li>
+                            <li><a class="linksLanding" href="index.html#getOffSection"><p>Get off<span>👈</span></p></a></li>
+                            <li><a class="linksLanding" href="index.html#giftCards"><p>Gift cards<span>👈</span></p></a></li>
                         </ul>
                     </nav>
                 </li>
