--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 
         <!-- Get 25% Off -->
 
-        <section class="getOff" id="getOffSection">
+        <section class="getOffHoddy" id="getOffSection">
             <article class="containerGetOff">
                 <div class="info">
                     <h2 class="title">Get 25% off</h2>
